[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Objects/RobotFrickenLazer.gd" type="Script" id=1]
[ext_resource path="res://assets/images/fricken_lazer.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/robot_sounds/robot_lazer_01.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1 )

[node name="RobotFrickenLazer" type="RigidBody2D"]
z_index = 3
collision_mask = 5
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.04667 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4, -3 )
rect = Rect2( 0, 0, 8, 4 )

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="HitDetect" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetect"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="HitDetect" to="." method="_on_HitDetect_area_entered"]
[connection signal="body_entered" from="HitDetect" to="." method="_on_HitDetect_body_entered"]
